MapsActivity.java done mostly. It's layout also done. Necessary dependencies added in build.gradle. Google Map api key generated. strings.xml, colors.xml updated. Necessary drawables added. LogInActivity.java, SignUpActivity.java, ActivityStarter.java, Constants.java updated. GpsUtils.java added.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#1C3143</color>
     <color name="colorPrimaryDark">#1C3143</color>
     <color name="colorAccent">#212121</color>
+
+    <color name="colorPrimaryText">#212121</color>
+    <color name="colorGreen">#2ecc71</color>
 </resources>
