--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -53,7 +53,7 @@
             android:layout_margin="16dp"
             android:gravity="center"
             android:background="@color/colorGreen"
-            android:text="@string/save"
+            android:text="@string/register"
             android:textSize="18sp"
             android:textColor="@android:color/white"/>
 
